--- a/coverage-report/jp/co/dk/datastoremanager/DataStoreParameter.html
+++ b/coverage-report/jp/co/dk/datastoremanager/DataStoreParameter.html
@@ -26,7 +26,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     <tr>
       <td class='line'></td><td>&nbsp;</td>
       <td class='comment' onclick='showHideLines(this)'><div>/**
- * データストアに接続する際に使用するパラメータを定義するクラスです。
+ * DataStoreParameterは、データストアにアクセスする際に必要なパラメータを保持するパラメータクラスが実装する基底クラスです。
  * 
  * @version 1.0
  * @author D.Kanno
@@ -43,66 +43,149 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>16</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	private DataStoreKind <span class='instance covered' title='Reads: 1 Writes: 9'>dataStoreKind</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected DataStoreKind <span class='instance covered' title='Reads: 1720 Writes: 81'>dataStoreKind</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'></td><td>&nbsp;</td>
       <td class='comment' onclick='showHideLines(this)'><div>	/**
 	 * コンストラクタ&lt;p/>
-	 * 指定のデータストア種別を元にインスタンスを生成します。
+	 * 指定されたデータストア種別を元にデータストアパラメータのインスタンスを生成します。&lt;br/>
+	 * データストア種別が設定されなかった場合、例外を送出する。
 	 * 
 	 * @param dataStoreKind データストア種別
-	 * @throws DataStoreManagerException インスタンスの生成に失敗した場合
+	 * @throws DataStoreManagerException データストア種別が設定されなかった場合
 	 */    <tr>
-      <td></td><td class='count'>9</td>
+      <td></td><td class='count'>83</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
-        <span class='uncovered' onclick="showPath(this,'l25s0 l26s0 l26s1')">A: 0</span>
-        <span class='covered' onclick="showPath(this,'l25s0 l26s0 l27s0 l28s0')">B: 9</span>
+        <span style='cursor:default; background-color:#00ff00' onclick='hidePath()'>Path coverage: 2/2</span>
+        <span class='covered' onclick="showPath(this,'l26s0 l27s0 l27s1')">A: 2</span>
+        <span class='covered' onclick="showPath(this,'l26s0 l27s0 l28s0 l29s0')">B: 81</span>
       </td>
     </tr>
 </div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>25</td><td class='count'>9</td>
-      <td><pre class='prettyprint covered' id='l25s0'>	protected DataStoreParameter(DataStoreKind dataStoreKind) throws DataStoreManagerException {</pre></td>
+      <td class='line'>26</td><td class='count'>83</td>
+      <td><pre class='prettyprint covered' id='l26s0'>	protected DataStoreParameter(DataStoreKind dataStoreKind) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>26</td><td class='count'>9</td>
-      <td><pre class='prettyprint jmp'>		<span id='l26s0' title='Executions: 9' class='covered'>if (dataStoreKind == null)</span> <span id='l26s1' title='Executions: 0' class='uncovered'>throw new DataStoreManagerException(DATASTORE_PARAMETER_CREATE_FAILE_DATASTOREKIND_IS_NOT_SET);</span></pre></td>
+      <td class='line'>27</td><td class='count'>83</td>
+      <td><pre class='prettyprint jmp'>		<span id='l27s0' title='Executions: 83' class='covered'>if (dataStoreKind == null)</span> <span id='l27s1' title='Executions: 2' class='covered'>throw new DataStoreManagerException(DATA_STORE_KIND_IS_NOT_SET);</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>27</td><td class='count'>9</td>
-      <td><pre class='prettyprint covered' id='l27s0'>		this.dataStoreKind = dataStoreKind;</pre></td>
+      <td class='line'>28</td><td class='count'>81</td>
+      <td><pre class='prettyprint covered' id='l28s0'>		this.dataStoreKind = dataStoreKind;</pre></td>
     </tr>
     <tr>
-      <td class='line'>28</td><td class='count'>9</td>
-      <td><pre class='prettyprint covered' id='l28s0'>	}</pre></td>
+      <td class='line'>29</td><td class='count'>81</td>
+      <td><pre class='prettyprint covered' id='l29s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'></td><td>&nbsp;</td>
       <td class='comment' onclick='showHideLines(this)'><div>	/**
-	 * 設定されたデータストア種別を取得する。
+	 * データストア種別を取得する。
 	 * 
 	 * @return データストア種別
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>35</td><td>&nbsp;</td>
+      <td class='line'>36</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public DataStoreKind getDataStoreKind() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>36</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l36s0'>		return this.dataStoreKind;</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>37</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	}</pre></td>
+      <td class='line'>37</td><td class='count'>8</td>
+      <td><pre class='prettyprint covered' id='l37s0'>		return this.dataStoreKind;</pre></td>
     </tr>
     <tr>
       <td class='line'>38</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	}</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'></td><td>&nbsp;</td>
+      <td class='comment' onclick='showHideLines(this)'><div>	/**
+	 * このデータストアパラメータを元にデータストアインスタンスを生成する。
+	 * 
+	 * @return データストアインスタンス
+	 */</div><span>	/*...*/</span></td>
+    </tr>
+    <tr>
+      <td class='line'>45</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	protected abstract DataStore createDataStore();</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'>47</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	@Override</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>48</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>49</td><td class='count'>1712</td>
+      <td><pre class='prettyprint covered' id='l49s0'>		return this.dataStoreKind.hashCode() * 17;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>50</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	}</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'>52</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	@Override</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>53</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public boolean equals(Object object) {</pre></td>
+    </tr>
+    <tr>
+      <td></td><td class='count'>430</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#40bf00' onclick='hidePath()'>Path coverage: 3/4</span>
+        <span class='covered' onclick="showPath(this,'l54s0 l54s1')">A: 6</span>
+        <span class='uncovered' onclick="showPath(this,'l54s0 l55s0 l55s1')">B: 0</span>
+        <span class='covered' onclick="showPath(this,'l54s0 l55s0 l56s0 l57s0 l57s1')">C: 216</span>
+        <span class='covered' onclick="showPath(this,'l54s0 l55s0 l56s0 l57s0 l58s0')">D: 208</span>
+      </td>
+    </tr>
+    <tr>
+      <td class='line'>54</td><td class='count'>430</td>
+      <td><pre class='prettyprint jmp'>		<span id='l54s0' title='Executions: 430' class='covered'>if (object == null)</span> <span id='l54s1' title='Executions: 6' class='covered'>return false;</span></pre></td>
+    </tr>
+    <tr>
+      <td class='line'>55</td><td class='count'>424</td>
+      <td><pre class='prettyprint jmp'>		<span id='l55s0' title='Executions: 424' class='covered'>if (!(object instanceof DataStoreParameter)) return false;</span></pre></td>
+    </tr>
+    <tr>
+      <td class='line'>56</td><td class='count'>424</td>
+      <td><pre class='prettyprint covered' id='l56s0'>		DataStoreParameter thisClassObj = (DataStoreParameter) object;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>57</td><td class='count'>424</td>
+      <td><pre class='prettyprint jmp'>		<span id='l57s0' title='Executions: 424' class='covered'>if (this.hashCode() == thisClassObj.hashCode()) return true;</span></pre></td>
+    </tr>
+    <tr>
+      <td class='line'>58</td><td class='count'>208</td>
+      <td><pre class='prettyprint covered' id='l58s0'>		return false;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>59</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	}</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'>61</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	@Override</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>62</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public abstract String toString();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>63</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>}</pre></td>
     </tr>
   </table>
